--- a/src/app/components/politica-privacidad/politica-privacidad.component.html
+++ b/src/app/components/politica-privacidad/politica-privacidad.component.html
@@ -5,7 +5,7 @@
                 <img class="contacto__formulario-formulario-times__close" (click)="closeModal()" src="../../../assets/times-close.svg" alt="">
             </div>
             <div class="container__titulo">
-                <h2>Politica & Privacidad</h2>
+                <h2>Politica de Privacidad</h2>
             </div>
             <div class="container__condiciones">
                 <p>
